app/assets/stylesheets/custom.css.scss
@import "bootstrap";

/* mixins, variables, etc. */

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* universal */

body {
  color: #333333;
  font-family: 'Cabin', Helvetica, Arial, sans-serif;
  background-image: image-url('background.jpg');
  background-size: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

section {
  overflow: auto;
}

.content {
  margin-left: 0px !important;
  a:hover {
    text-decoration: none;
  }
}

/* typography */

h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-family: 'Vollkorn', Georgia, Times, serif;
  /*font-size: 3em;
  letter-spacing: -2px;*/
  margin-bottom: 30px;
  text-align: center;
}


h2 {
  font-family: 'Vollkorn', Georgia, Times, serif;
  font-weight: bold;
  margin-bottom: 35px;
}

h3 {
  font-family: 'Vollkorn', Georgia, Times, serif;
}

p {
  font-family: 'Cabin', Helvetica, Arial, sans-serif;
  font-size: 1.2em;
  line-height: 1.7em;
}

/* header */

/* nav bar */

.navbar {
  height: 70px;
}

.navbar-header a , .navbar-header {
  padding-top:20px;
  font-size:20px;
  font-weight:bold;
  color: #55361A;
  text-decoration: none;
  padding-left:15px;
}
.navbar-nav {
  padding-top:20px;
}
/*


.navbar .nav > li > a {
  font-family: 'Vollkorn', Georgia, Times, serif;
  font-weight: 700 !important;
}
.navbar-collapse{
  float:left;
  display:inline-block;
}
.navbar .navbar-nav {
  display: inline-block;
  text-align:center;
}
.navbar-header{
 
  //padding-left:50px;
  display:inline-block;
}
*/
#logo_text{
  margin-left:100px;
}
.navbar .navbar-collapse {
  text-align: center;
  float:left;
}

ul {
  list-style-type: none;
  padding:0;
  margin:0;
}

ul.nav a:link, a:visited {
  display: inline;
  //width: 130px;
  font-weight: bold;
  text-align: center;
  //padding: 4px;
  text-decoration: none;
  text-transform: uppercase;
  &:hover {
    text-decoration: none;
  }
}

.activeNav {
 border-bottom: 3px solid #333333;
}

.activeNav a {
  color: #333333 !important;
}

.hero-unit {
  margin-top: 5em;
}

/* footer */

#footer {
  left: inherit;
  width: 20%;
  margin-top: 45px;
  padding-top: 5px;
  padding-right: 30px;
  padding-bottom: 10px;
  a {
    font-family: 'Cabin', Helvetica, Arial, sans-serif;
    font-weight: 600;
    color: #333333;
    &:hover {
      text-decoration: none;
      color: #333333;
    }
  }
  small {
    float: left;
  }
  ul {
    float: right;
    list-style: none;
    li {
      float: left;
      margin-left: 10px;
    }
  }
}

.container {
  width: 75%;
  background: #fff;
  margin-top: 5em;
  padding-top: 2em;
  margin-bottom: 5em;
  min-height: 600px;
  height: 100%;
  opacity: 0.8;
  filter: alpha(opacity=80);
  padding-bottom: 2em;
  border-radius: 10px;
}

.navbar-fixed-bottom {
  position: fixed;
  bottom: 0;
  right: 0;
}

.card-element {
  display: inline-block;
  padding: 10px;
  width: 100%;
}

.card {
  margin: 2em;
  border-radius: 10px;
  border-bottom: 2px solid rgba(204, 204, 204, .7);
  -webkit-background-clip: padding-box; /* for Safari */
  background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */;
  padding: 16px;
  background-color: #fff;
}

.plus_sign {
  border-radius: 50%;
}

.bean_heading{
  display:inline;
}
.form-control {
  height:auto;
  width: 100%;
}

